# datafusion-umami

./: Cargo.toml
.github/workflows/: audit.yml  dependencies.yml  dev.yml  dev_pr.yml  docs.yaml  docs_pr.yaml  extended.yml  labeler.yml  large_files.yml  rust.yml
benchmarks/: bench.sh  compare.py
benchmarks/src/util/: options.rs
datafusion-examples/examples/: advanced_parquet_index.rs
datafusion/arrow-extra/: Cargo.toml
datafusion/arrow-extra/src/: compute.rs  lib.rs  utils.rs
datafusion/arrow-extra/src/compute/: concat.rs  scatter.rs  take.rs
datafusion/arrow-extra/src/utils/: bitset.rs  buffer_dedup.rs  shared_size.rs
datafusion/common/: Cargo.toml
datafusion/common/src/: config.rs
datafusion/core/src/datasource/: mod.rs
datafusion/core/src/test_util/: parquet.rs
datafusion/core/tests/parquet/: custom_reader.rs  page_pruning.rs
datafusion/datasource-csv/src/: source.rs
datafusion/datasource-json/src/: file_format.rs  source.rs
datafusion/datasource-parquet/src/: file_format.rs
datafusion/datasource/src/: file_groups.rs  mod.rs
datafusion/functions/benches/: chr.rs
datafusion/io-uring-async/: Cargo.toml  README.md
datafusion/io-uring-async/src/: lib.rs  squeue.rs
datafusion/physical-expr-common/src/: binary_map.rs  binary_view_map.rs
datafusion/physical-optimizer/src/: coalesce_batches.rs  compact.rs
datafusion/physical-plan/: Cargo.toml
datafusion/physical-plan/src/: common.rs  compact.rs  execution_plan.rs  lib.rs  materialize.rs  projection.rs  unnest.rs
datafusion/proto/proto/: datafusion.proto
(+75 files in other folders)
